Increase performance, fix contrast

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --clr-purpleblue: #5E3BEE;
     --clr-black: #282938;
     --clr-light: #F5FCFF;
-    --clr-pink: #E62872;
+    --clr-pink: #9B184B;
     --clr-darkblue: #1C1E53;
     --clr-green: #006B6A;
 }
